--- a/AtlirVPNConnect/App.config
+++ b/AtlirVPNConnect/App.config
@@ -24,6 +24,7 @@ explicit-exit-notify 3
 persist-key
 persist-tun
 comp-lzo
+reneg-sec 21600
 remote-cert-tls server
 ns-cert-type server</value>
             </setting>
