Update for Blocked Sites
Update to fix issues with users not being able to block websites.
Edited config file so that the server could push routes to clients

--- a/AtlirVPNConnect/Properties/Settings.settings
+++ b/AtlirVPNConnect/Properties/Settings.settings
@@ -16,8 +16,10 @@ explicit-exit-notify 3
 persist-key
 persist-tun
 comp-lzo
+reneg-sec 21600
 remote-cert-tls server
-ns-cert-type server</Value>
+ns-cert-type server
+allow-pull-fqdn</Value>
     </Setting>
   </Settings>
 </SettingsFile>
