--- a/AtlirVPNConnect/App.config
+++ b/AtlirVPNConnect/App.config
@@ -26,7 +26,8 @@ persist-tun
 comp-lzo
 reneg-sec 21600
 remote-cert-tls server
-ns-cert-type server</value>
+ns-cert-type server
+allow-pull-fqdn</value>
             </setting>
         </AtlirVPNConnect.Properties.Settings>
     </userSettings>
